--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #c36b4c; }
+  background: #07fb47; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #d85d30; }
+  background: #4874ed; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f9f548; }
+  background: #35cc52; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #adcaf5; }
+  background: #ff69ac; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e64499; }
+  background: #20b828; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f9065d; }
+  background: #3ab801; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #830588; }
+  background: #94b9b3; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #8b5fd5; }
+  background: #8e5a9c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #4642ec; }
+  background: #5ff07b; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e4a6a9; }
+  background: #75ca13; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f06eb9; }
+  background: #30e13b; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #4f8513; }
+  background: #e84e92; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e6aaff; }
+  background: #950128; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #df148a; }
+  background: #c4adff; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #5b5820; }
+  background: #b57515; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #39a96d; }
+  background: #859f6b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #73b55b; }
+  background: #c4039f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #28c0c9; }
+  background: #ff8198; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #081278; }
+  background: #97dfd3; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #1d8204; }
+  background: #ba29c6; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #7a461d; }
+  background: #8b6867; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #72b679; }
+  background: #a56569; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #d2978e; }
+  background: #37bfdc; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7f10b1; }
+  background: #396f43; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #4ff2e7; }
+  background: #83c802; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #a871b6; }
+  background: #17bde8; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #12d52a; }
+  background: #771a51; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #11cf2d; }
+  background: #01f672; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #bb31e5; }
+  background: #773281; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #1669cd; }
+  background: #df826b; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #451d52; }
+  background: #92a971; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #2db782; }
+  background: #938880; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e23733; }
+  background: #872204; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #0751e1; }
+  background: #ee3788; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a435a0; }
+  background: #e1566c; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #96f85a; }
+  background: #153d94; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d78ce8; }
+  background: #56e9fd; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #b312a1; }
+  background: #ff10ee; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #757b61; }
+  background: #838aeb; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #b86d81; }
+  background: #a834b8; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #c76dd0; }
+  background: #201e42; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #b714ee; }
+  background: #842d61; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #7dccc5; }
+  background: #f5a6fa; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #db06db; }
+  background: #5ddd97; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #64d97d; }
+  background: #c71521; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f6f721; }
+  background: #6eb95c; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #6fbdb7; }
+  background: #68668b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #0a280b; }
+  background: #9f1dfd; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #dfc863; }
+  background: #ea1c2a; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2b8523; }
+  background: #b4d8d1; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #21be49; }
+  background: #aa3f11; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c6808c; }
+  background: #1b69dd; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #7bed6e; }
+  background: #33c341; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #1cbe36; }
+  background: #9b27f9; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #45c9a4; }
+  background: #69ea91; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c2943b; }
+  background: #c7f9b5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #7390c6; }
+  background: #044233; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #322a4d; }
+  background: #ccff96; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #6acfa3; }
+  background: #ff756b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #76420b; }
+  background: #8f176c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #01d412; }
+  background: #38f647; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #9849ca; }
+  background: #45e59c; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #36a818; }
+  background: #4caebd; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #8b85a0; }
+  background: #bcfb8c; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7da699; }
+  background: #c98756; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #c241fc; }
+  background: #087e86; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #cc1acc; }
+  background: #c2de28; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b5ee8d; }
+  background: #f837d1; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #41174e; }
+  background: #3edf35; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #4ccdc7; }
+  background: #595d44; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #906153; }
+  background: #a6797c; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #5b0240; }
+  background: #120940; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #88e3fa; }
+  background: #a5dfad; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #724627; }
+  background: #3c8855; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #115274; }
+  background: #0aceee; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #5e5527; }
+  background: #1ef355; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #cedeb8; }
+  background: #df39c4; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #fe56ce; }
+  background: #d3abd1; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #3b4d19; }
+  background: #a7c746; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #3333ab; }
+  background: #e45046; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #631f8b; }
+  background: #243146; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d79315; }
+  background: #a2b135; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #dc5d08; }
+  background: #6e3eaf; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2e4d28; }
+  background: #da15b7; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b41b88; }
+  background: #37634d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #f5c016; }
+  background: #b3b566; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #32e768; }
+  background: #aa8f2a; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8e7caf; }
+  background: #3f738e; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #7f0edc; }
+  background: #68491a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #184dd1; }
+  background: #8579a8; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8071af; }
+  background: #25f829; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #2a5c06; }
+  background: #efe08e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4e5e0f; }
+  background: #be4822; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #65e7f1; }
+  background: #6e08b3; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #aa1baf; }
+  background: #68c3d3; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #f2cf82; }
+  background: #026194; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a15f75; }
+  background: #3dd16c; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #4f1c9b; }
+  background: #5fcd5c; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #5106c3; }
+  background: #704187; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #4ebffa; }
+  background: #ec6e73; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16466,6 +16466,101 @@ option {
     font-size: 14px;
     color: #4c4c4c;
     margin: 0px; }
+
+.switch-t {
+  position: relative;
+  display: inline-block;
+  width: auto;
+  height: 34px; }
+
+.switch-t input {
+  display: none; }
+
+.slider-switch {
+  position: relative;
+  cursor: pointer;
+  background-color: #776fff;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  user-select: none;
+  display: grid;
+  padding: 0px 10px;
+  grid-template-columns: auto auto; }
+
+input:checked + .slider-switch {
+  background-color: #776fff;
+  color: white; }
+
+input:focus + .slider-switch {
+  box-shadow: 0 0 1px #5283ff; }
+
+input:checked + .slider-switch:before {
+  -webkit-transform: translateX(78px);
+  -ms-transform: translateX(78px);
+  transform: translateX(78px);
+  background-color: white; }
+
+/* Rounded slids */
+.slider-switch.round {
+  border-radius: 34px; }
+
+.slider-switch.round:before {
+  border-radius: 34px; }
+
+.slider-switch.square:before {
+  border-radius: 4px; }
+
+.switch-non {
+  position: relative;
+  /* top: 0; */
+  color: white;
+  bottom: 0;
+  margin: auto;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  z-index: 1;
+  /* border-radius: 100%; */
+  padding: 9px 20px; }
+
+.switch-active {
+  color: black; }
+
+.switch-oui {
+  position: relative;
+  top: 0;
+  /* right: 10px; */
+  color: white;
+  bottom: 0;
+  margin: auto;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  z-index: 1;
+  /* border-radius: 100%; */
+  padding: 9px 20px; }
+
+input:checked + .slider-switch > .switch-oui {
+  color: #4c4c4c; }
+
+input:not(:checked) + .slider-switch > .switch-non {
+  color: #4c4c4c; }
+
+.switch-active:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 100%;
+  left: 0;
+  bottom: 4px;
+  background-color: #fff;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  z-index: -1;
+  border-radius: 34px; }
+
+.align-items-center {
+  align-items: center !important; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
