--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #07fb47; }
+  background: #25683e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #4874ed; }
+  background: #c37e74; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #35cc52; }
+  background: #e6fc3c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #ff69ac; }
+  background: #261bd6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #20b828; }
+  background: #f4591c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #3ab801; }
+  background: #7f1d3c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #94b9b3; }
+  background: #c9742f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #8e5a9c; }
+  background: #bce7f1; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #5ff07b; }
+  background: #3e7d71; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #75ca13; }
+  background: #d0f32e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #30e13b; }
+  background: #233ea7; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e84e92; }
+  background: #694be2; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #950128; }
+  background: #c23f04; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #c4adff; }
+  background: #f403cf; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b57515; }
+  background: #70d29c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #859f6b; }
+  background: #59c038; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c4039f; }
+  background: #69d314; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ff8198; }
+  background: #c79a91; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #97dfd3; }
+  background: #7ac78f; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #ba29c6; }
+  background: #29dc84; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #8b6867; }
+  background: #2673d2; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #a56569; }
+  background: #59d7f7; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #37bfdc; }
+  background: #446075; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #396f43; }
+  background: #affded; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #83c802; }
+  background: #c2319b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #17bde8; }
+  background: #7057fe; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #771a51; }
+  background: #112ad8; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #01f672; }
+  background: #82b881; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #773281; }
+  background: #2e51c9; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #df826b; }
+  background: #60436d; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #92a971; }
+  background: #28727f; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #938880; }
+  background: #750df0; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #872204; }
+  background: #0a4e94; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #ee3788; }
+  background: #1d1e61; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e1566c; }
+  background: #573a36; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #153d94; }
+  background: #50421f; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #56e9fd; }
+  background: #e2d29d; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ff10ee; }
+  background: #12d6d3; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #838aeb; }
+  background: #8c305e; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #a834b8; }
+  background: #48e078; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #201e42; }
+  background: #017d6b; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #842d61; }
+  background: #243daa; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f5a6fa; }
+  background: #99015e; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #5ddd97; }
+  background: #7d1273; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c71521; }
+  background: #9b0311; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6eb95c; }
+  background: #4358f5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #68668b; }
+  background: #b04838; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #9f1dfd; }
+  background: #b42d13; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #ea1c2a; }
+  background: #8b7859; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b4d8d1; }
+  background: #ec209a; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #aa3f11; }
+  background: #43c994; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #1b69dd; }
+  background: #7dd4f0; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #33c341; }
+  background: #0ec35c; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #9b27f9; }
+  background: #0754f8; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #69ea91; }
+  background: #0e039b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c7f9b5; }
+  background: #3baadf; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #044233; }
+  background: #585e45; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ccff96; }
+  background: #c6673f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #ff756b; }
+  background: #6f817e; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #8f176c; }
+  background: #1bfa69; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #38f647; }
+  background: #1ff6c7; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #45e59c; }
+  background: #0c6eb2; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #4caebd; }
+  background: #9c3f6a; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #bcfb8c; }
+  background: #1a14e5; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c98756; }
+  background: #ff6b72; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #087e86; }
+  background: #97689f; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c2de28; }
+  background: #eabe26; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #f837d1; }
+  background: #fb131f; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #3edf35; }
+  background: #6435a8; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #595d44; }
+  background: #d493b2; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a6797c; }
+  background: #d5875b; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #120940; }
+  background: #824d88; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #a5dfad; }
+  background: #35f013; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #3c8855; }
+  background: #32d49c; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #0aceee; }
+  background: #4532eb; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #1ef355; }
+  background: #ac35f9; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #df39c4; }
+  background: #3819bd; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d3abd1; }
+  background: #890a8c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #a7c746; }
+  background: #b6c277; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #e45046; }
+  background: #3bf976; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #243146; }
+  background: #48c89a; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #a2b135; }
+  background: #e89b3b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #6e3eaf; }
+  background: #2658f0; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #da15b7; }
+  background: #2706f5; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #37634d; }
+  background: #8df0fd; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #b3b566; }
+  background: #8d8b57; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #aa8f2a; }
+  background: #c81284; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #3f738e; }
+  background: #093ef9; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #68491a; }
+  background: #53aa5f; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #8579a8; }
+  background: #739cf5; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #25f829; }
+  background: #33fb35; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #efe08e; }
+  background: #f5c7d2; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #be4822; }
+  background: #3557c2; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #6e08b3; }
+  background: #1c7d25; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #68c3d3; }
+  background: #eff173; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #026194; }
+  background: #850e70; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #3dd16c; }
+  background: #8df689; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #5fcd5c; }
+  background: #9ea861; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #704187; }
+  background: #a48252; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ec6e73; }
+  background: #2eb107; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14850,6 +14850,10 @@ td .check-container {
     margin-bottom: 5px; }
     .field-section-wrapper p input {
       margin-right: 5px; }
+  .field-section-wrapper .hrs-select-group {
+    display: flex;
+    align-items: center;
+    margin-top: 10px; }
   .field-section-wrapper .custom-select {
     background-color: #fff;
     font-family: "proxima-regular" !important; }
@@ -14897,6 +14901,9 @@ td .check-container {
       background: #a9a5fd;
       border: 1px solid #a9a5fd;
       color: #fff; }
+
+.mid-width-select {
+  width: 175px !important; }
 
 .notification-dropdow-div {
   min-width: auto !important;
@@ -16273,7 +16280,6 @@ option {
 .slid-screen-wrapper .tabs-aggre .active::before {
   width: 50px;
   height: 100%;
-  background: #fff;
   position: absolute;
   top: 0px;
   right: -10px;
@@ -16484,7 +16490,7 @@ option {
   transition: all 0.4s;
   user-select: none;
   display: grid;
-  padding: 0px 10px;
+  padding: 0px 4px;
   grid-template-columns: auto auto; }
 
 input:checked + .slider-switch {
@@ -16561,6 +16567,102 @@ input:not(:checked) + .slider-switch > .switch-non {
 
 .align-items-center {
   align-items: center !important; }
+
+.userProfile-wrapper {
+  position: relative;
+  min-width: auto !important;
+  border: 0px solid rgba(0, 0, 0, 0.15);
+  height: 300px; }
+  .userProfile-wrapper .userProfile-container {
+    background: #fff;
+    top: 8px;
+    right: -65px;
+    left: unset;
+    width: 362px;
+    box-shadow: 0px 5px 7px 6px #c1c1c1;
+    padding: 15px;
+    position: absolute;
+    border-radius: 6px; }
+  .userProfile-wrapper .userLogout-icon {
+    background: #DBDDE8;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 8px 10px 6px;
+    border-radius: 28px;
+    position: absolute;
+    right: 0px; }
+  .userProfile-wrapper .userSettings-icon {
+    background: #DBDDE8;
+    background-image: url(../images/userEdit-icon.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    padding: 14px 21px;
+    border-radius: 28px; }
+    .userProfile-wrapper .userSettings-icon:hover {
+      background: #17D794;
+      background-image: url(../images/userEditWhite-icon.svg);
+      background-repeat: no-repeat;
+      background-position: center center;
+      padding: 14px 21px;
+      border-radius: 28px; }
+  .userProfile-wrapper .userPictureNTitle {
+    text-align: center; }
+    .userProfile-wrapper .userPictureNTitle img {
+      width: auto;
+      height: auto;
+      border-radius: 50%; }
+    .userProfile-wrapper .userPictureNTitle h2 {
+      font-size: 22px;
+      font-weight: 600;
+      margin: 4px 0px;
+      color: #000; }
+    .userProfile-wrapper .userPictureNTitle h4 {
+      color: #9DA6AF; }
+    .userProfile-wrapper .userPictureNTitle .userpic-div {
+      position: relative;
+      width: 120px;
+      margin: 0px auto;
+      position: relative; }
+      .userProfile-wrapper .userPictureNTitle .userpic-div .userEdit-icon {
+        position: absolute;
+        bottom: -2px;
+        right: -10px;
+        background: #fff;
+        padding: 7px;
+        border-radius: 50%; }
+        .userProfile-wrapper .userPictureNTitle .userpic-div .userEdit-icon img {
+          width: 16px; }
+  .userProfile-wrapper .userSettingIcons-wrapper {
+    margin: 15px auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .userProfile-wrapper .passwordconditionText {
+    padding: 10px;
+    background: #F6F6F6;
+    margin-bottom: 25px; }
+    .userProfile-wrapper .passwordconditionText ul li {
+      list-style: disc;
+      padding: 6px;
+      color: #4C4C4C;
+      list-style-position: inside; }
+    .userProfile-wrapper .passwordconditionText ul .greenTxt {
+      color: #17D794; }
+
+.eyes-icon-password input[type="checkbox"] {
+  border: 1px solid #b9babd;
+  background: #fff;
+  width: 12px;
+  display: none; }
+
+.eyes-icon-password input[type="checkbox"]:checked + label {
+  background-image: url(../images/eye-show-icon-line.svg); }
+
+.eyes-icon-password label.show-password-icon {
+  background: url(../images/eye-show-icon.svg) no-repeat 0px center;
+  cursor: pointer;
+  padding-left: 23px; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
