--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #25683e; }
+  background: #d3d68f; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #c37e74; }
+  background: #633029; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e6fc3c; }
+  background: #80b9ff; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #261bd6; }
+  background: #8b7175; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f4591c; }
+  background: #49b834; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7f1d3c; }
+  background: #0d6b5c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c9742f; }
+  background: #688c37; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #bce7f1; }
+  background: #9e5c19; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #3e7d71; }
+  background: #10ecb8; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #d0f32e; }
+  background: #8650d5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #233ea7; }
+  background: #2f98c3; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #694be2; }
+  background: #fb63be; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c23f04; }
+  background: #a8ab86; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #f403cf; }
+  background: #ec6a26; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #70d29c; }
+  background: #b7f367; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #59c038; }
+  background: #e85eaf; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #69d314; }
+  background: #864459; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #c79a91; }
+  background: #bb7d05; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #7ac78f; }
+  background: #1565c2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #29dc84; }
+  background: #70858e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2673d2; }
+  background: #bcc3b4; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #59d7f7; }
+  background: #6203a2; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #446075; }
+  background: #4109a0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #affded; }
+  background: #99202e; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #c2319b; }
+  background: #ebe9b3; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7057fe; }
+  background: #02e495; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #112ad8; }
+  background: #2cca9c; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #82b881; }
+  background: #89607d; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #2e51c9; }
+  background: #2bb61f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #60436d; }
+  background: #875178; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #28727f; }
+  background: #a66963; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #750df0; }
+  background: #65b9ed; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #0a4e94; }
+  background: #3a06c1; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #1d1e61; }
+  background: #b136b1; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #573a36; }
+  background: #07458d; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #50421f; }
+  background: #a12489; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #e2d29d; }
+  background: #8357b7; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #12d6d3; }
+  background: #49478c; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8c305e; }
+  background: #cbc93d; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #48e078; }
+  background: #eee488; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #017d6b; }
+  background: #24a3a0; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #243daa; }
+  background: #c044d5; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #99015e; }
+  background: #692087; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #7d1273; }
+  background: #2948ff; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9b0311; }
+  background: #164190; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #4358f5; }
+  background: #e8b1e2; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b04838; }
+  background: #6b7f1e; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #b42d13; }
+  background: #dffd15; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #8b7859; }
+  background: #180ec0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ec209a; }
+  background: #3c5edd; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #43c994; }
+  background: #a54b39; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7dd4f0; }
+  background: #d7afa1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #0ec35c; }
+  background: #460e84; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #0754f8; }
+  background: #f57abf; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #0e039b; }
+  background: #cbc048; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #3baadf; }
+  background: #392438; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #585e45; }
+  background: #e36c7c; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #c6673f; }
+  background: #ce8c2f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #6f817e; }
+  background: #6bb4ea; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #1bfa69; }
+  background: #179793; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #1ff6c7; }
+  background: #9337fa; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #0c6eb2; }
+  background: #eab74b; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #9c3f6a; }
+  background: #345c6b; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #1a14e5; }
+  background: #21932a; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ff6b72; }
+  background: #23b461; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #97689f; }
+  background: #4dc67e; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #eabe26; }
+  background: #105b87; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #fb131f; }
+  background: #619a44; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #6435a8; }
+  background: #6a66a9; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d493b2; }
+  background: #0a1c93; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d5875b; }
+  background: #18bfdc; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #824d88; }
+  background: #734e91; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #35f013; }
+  background: #4539dc; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #32d49c; }
+  background: #cde860; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #4532eb; }
+  background: #6c1f09; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #ac35f9; }
+  background: #6fd0f4; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #3819bd; }
+  background: #12b6b2; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #890a8c; }
+  background: #fb1543; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #b6c277; }
+  background: #d1a290; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #3bf976; }
+  background: #d9e6fb; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #48c89a; }
+  background: #de0358; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #e89b3b; }
+  background: #1b9388; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #2658f0; }
+  background: #7cf290; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2706f5; }
+  background: #2d38b3; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #8df0fd; }
+  background: #e697ab; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #8d8b57; }
+  background: #98ff01; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #c81284; }
+  background: #701b68; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #093ef9; }
+  background: #41d6ec; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #53aa5f; }
+  background: #6d27ec; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #739cf5; }
+  background: #9251e1; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #33fb35; }
+  background: #e4d15b; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #f5c7d2; }
+  background: #498946; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #3557c2; }
+  background: #deeacd; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #1c7d25; }
+  background: #12a2e9; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #eff173; }
+  background: #93f48c; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #850e70; }
+  background: #18c490; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #8df689; }
+  background: #f044dc; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9ea861; }
+  background: #703cfc; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #a48252; }
+  background: #777cd3; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #2eb107; }
+  background: #355c74; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16597,14 +16597,40 @@ input:not(:checked) + .slider-switch > .switch-non {
     background-repeat: no-repeat;
     background-position: center center;
     padding: 14px 21px;
-    border-radius: 28px; }
+    border-radius: 28px;
+    background-size: 25px; }
     .userProfile-wrapper .userSettings-icon:hover {
       background: #17D794;
       background-image: url(../images/userEditWhite-icon.svg);
       background-repeat: no-repeat;
       background-position: center center;
-      padding: 14px 21px;
-      border-radius: 28px; }
+      background-size: 25px; }
+  .userProfile-wrapper .userSettings-icon.active {
+    background: #17D794;
+    background-image: url(../images/userEditWhite-icon.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 25px; }
+  .userProfile-wrapper .userLock-icon {
+    background: #DBDDE8;
+    background-image: url(../images/userLock-icon.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    padding: 14px 21px;
+    border-radius: 28px;
+    background-size: 25px; }
+    .userProfile-wrapper .userLock-icon:hover {
+      background: #17D794;
+      background-image: url(../images/userLockWhite-icon.svg);
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 25px; }
+  .userProfile-wrapper .userLock-icon.active {
+    background: #17D794;
+    background-image: url(../images/userLockWhite-icon.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 25px; }
   .userProfile-wrapper .userPictureNTitle {
     text-align: center; }
     .userProfile-wrapper .userPictureNTitle img {
